permitted discount that includes fractional values, such as 12.5%, to quote